# swagger.yml
@@ -25,7 +25,7 @@ paths:
           description: |
         default:
           description: pong
-  /fruits/v1:
+  /fruits:
     get:
       summary: fruit
       description: |
@@ -61,16 +61,50 @@ paths:
           description: error
           schema:
             $ref: '#/definitions/ErrorResult'
+  /sign:
+    get:
+      summary: sign
+      description: |
+      parameters:
+        - name: name
+          in: query
+          description: |
+          required: false
+          type: string
+        - name: sign
+          in: query
+          description: |
+          required: false
+          type: string
+        - name: authors
+          in: query
+          description: |
+          required: false
+          schema:
+            $ref: '#/definitions/ArrayAuthor'
+      tags:
+        - sign
+      responses:
+        200:
+          description: |
+          schema:
+            $ref: '#/definitions/ArrayResult'
+        default:
+          description: error
+          schema:
+            $ref: '#/definitions/ErrorResult'
 definitions:
-  Content:
+  ArrayAuthor:
+    type: array
+    items:
+      $ref: '#/definitions/Author'
+  Author:
     type: object
     properties:
-      code:
-        type: string
       name:
         type: string
-      desc:
-        type: string
+      age:
+        type: integer
   Error:
     type: object
     properties:
